--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "editor.fontSize": 16,
-    "editor.cursorStyle": "block",
+    "editor.fontSize": 14,
+    "editor.cursorStyle": "line",
     "editor.wordWrap": "off",
     "files.exclude": {
         ".vscode": true
