--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "windows-10-os",
   "version": "1.0.0",
   "description": "desktop environment in the browser",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HishamKTD/windowsos.git"
@@ -14,5 +11,27 @@
   "bugs": {
     "url": "https://github.com/HishamKTD/windowsos/issues"
   },
-  "homepage": "https://github.com/HishamKTD/windowsos#readme"
+  "homepage": "https://github.com/HishamKTD/windowsos#readme",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.2.2",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
+  }
 }
