--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "eslint": "eslint ."
+    "stylelint": "stylelint **/*.css"
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
@@ -39,6 +39,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.3.3"
   }
 }
