--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stylelint": "stylelint **/*.css"
+    "stylelint": "stylelint **/*.css",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
@@ -34,13 +35,18 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.0",
+    "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^36.0.0",
+    "stylelint-prettier": "^5.0.0",
     "typescript": "^5.3.3"
   }
 }
