--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,5 @@
 {
   "trailingComma": "none",
   "singleQuote": true,
-  "tabWidth": 2,
-  "prettier/prettier": [
-    "error",
-    {
-      "singleQuote": true,
-      "parser": "flow"
-    }
-  ]
+  "tabWidth": 2
 }
